Fixed main height on mobile screen

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 main {
   width: 100%;
   flex-grow: 1;
-  height: calc(100vh - 120px);
+  height: calc(100dvh - 120px);
 }
 
 /* Вікно помилки */
